--- a/fefuactivity/Info.plist
+++ b/fefuactivity/Info.plist
@@ -62,6 +62,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Составление маршрута на карте</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Составление маршрута на карте</string>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
 </dict>
